Viewport overflow fix

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -247,9 +247,6 @@ div#basic-navbar-nav {
   background-color: #f8f9fa;
   padding-left: 20px !important;
   padding-right: 14px;
-  max-height: 800px;
-  overflow-y: auto;
-
 }
 
 
@@ -339,5 +336,15 @@ button.icon-button {
 @media screen and (max-width: 991px) {
  div.container-fluid {
     width: 752px;
+}
+
+/* dropdown styles */
+div#basic-navbar-nav {
+  background-color: #f8f9fa;
+  padding-left: 20px !important;
+  padding-right: 14px;
+  max-height: 800px;
+  overflow-y: auto;
+
 }
 }
